# temporal_rs_bindings

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json  test262-runner.mjs  tsconfig.json  tsconfig.test.json  tsup.config.ts
.github/workflows/: ci.yml
__test__/: cjs.spec.ts  index.spec.ts  temporal.spec.ts
crates/temporal-common/: Cargo.toml
crates/temporal-common/src/: lib.rs
crates/temporal-napi/: Cargo.toml  build.rs  index.d.ts  index.js
crates/temporal-napi/src/: calendar.rs  duration.rs  instant.rs  lib.rs  now.rs  options.rs  plain_date.rs  plain_date_time.rs  plain_month_day.rs  plain_time.rs  plain_year_month.rs  time_zone.rs  zoned_date_time.rs
crates/temporal-wasm/: Cargo.toml
crates/temporal-wasm/src/: calendar.rs  duration.rs  instant.rs  lib.rs  now.rs  options.rs  plain_date.rs  plain_date_time.rs  plain_month_day.rs  plain_time.rs  plain_year_month.rs  time_zone.rs  zoned_date_time.rs
docs/plans/: 2026-03-19-temporal-rs-node-bindings.md
lib/: binding.ts  calendar.ts  convert.ts  duration.ts  enums.ts  helpers.ts  instant.ts  intl.ts  now.ts  plaindate.ts  plaindatetime.ts  plainmonthday.ts  plaintime.ts  plainyearmonth.ts  temporal.d.mts  temporal.d.ts  temporal.mjs  temporal.ts  timezone.ts  zoneddatetime.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-x64-msvc/: package.json
scripts/: bump-version.sh
